Added sass support

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blue-brick-dev",
+  "name": "bluebrick-admin",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -29,6 +29,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "geckodriver": "^1.20.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11",
     "wdio-chromedriver-service": "^6.0.3",
     "wdio-geckodriver-service": "^1.1.0"
